# rtio-device-sdk-c

./: .gitignore  CMakeLists.txt  LICENSE  README-CN.md  README.md  root.cmake
demos-esp32/logging-stack/: logging_stack.h
demos-esp32/rtio/remote_observation/: CMakeLists.txt  README.md  sdkconfig.defaults
demos-esp32/rtio/remote_observation/client/: api.js  index.html
demos-esp32/rtio/remote_observation/main/: CMakeLists.txt  demo_config.h  led_control.c  remote_observation.c
demos-esp32/rtio/remote_switch/: CMakeLists.txt
demos-esp32/rtio/remote_switch/client/: api.js  index.html
demos-esp32/rtio/remote_switch/main/: CMakeLists.txt  Kconfig.projbuild  core_rtio_config.h  demo_config.h  rtio_switch.c
demos-esp32/rtio/rtio_demo_tls/: CMakeLists.txt
demos-esp32/rtio/rtio_demo_tls/main/: CMakeLists.txt  Kconfig.projbuild  demo_config.h  rtio_demo_tls.c  wifi_init.c
demos-posix/: demosRoot.cmake  rtioAllDemos.cmake
demos-posix/logging-stack/: logging_levels.h  logging_stack.h
demos-posix/rtio/rtio_demo_copost_to_server/: CMakeLists.txt  core_rtio_config.h  demo_config.h  rtio_demo_copost_to_server.c
demos-posix/rtio/rtio_demo_obget/: CMakeLists.txt  core_rtio_config.h  demo_config.h  rtio_demo_obget.c
demos-posix/rtio/rtio_demo_simple/: CMakeLists.txt  core_rtio_config.h  demo_config.h  rtio_demo_simple.c
demos-posix/rtio/rtio_demo_tls/: CMakeLists.txt  demo_config.h  rtio_demo_tls.c
docs/: rtio-sdk-c-api.md
integration-test/: CMakeLists.txt
integration-test/crc_test/: CMakeLists.txt  crc_check_data.py  crc_test.c  crc_test_auto.sh  test_config.h
integration-test/platform_test/posix/: CMakeLists.txt  posix_api_simple_test.c  posix_api_simple_test.h
libraries/standard/coreRTIO/: rtioFilePaths.cmake
libraries/standard/coreRTIO/source/: core_rtio.c  core_rtio_serializer.c
libraries/standard/coreRTIO/source/include/: core_rtio.h  core_rtio_config_defaults.h
libraries/standard/coreRTIO/source/interface/: os_interface.h  transport_interface.h
libraries/standard/coreRTIO/source/internel/: core_rtio_serializer.h
platform/: CMakeLists.txt
platform/esp32/: esp32FilePaths.cmake
platform/esp32/os/: os_esp.c
platform/esp32/os/include/: os_esp.h
platform/esp32/transport/tls/: network_esp.c
platform/esp32/transport/tls/include/: network_esp.h
platform/posix/: CMakeLists.txt  posixFilePaths.cmake
platform/posix/os/: CMakeLists.txt  clock_posix.c  os_posix.c
platform/posix/os/include/: os_posix.h
platform/posix/transport/: CMakeLists.txt
platform/posix/transport/internel/: sockets_posix.c
platform/posix/transport/internel/include/: sockets_posix.h
platform/posix/transport/openssl/: openssl_posix.c
platform/posix/transport/openssl/include/: openssl_posix.h
platform/posix/transport/plaintext/: CMakeLists.txt  plaintext_posix.c
platform/posix/transport/plaintext/include/: plaintext_posix.h
tools/cmake/: rtioSDK_ESP32.cmake  rtioSDK_POSIX_OpenSSL.cmake  rtioSDK_POSIX_Plaintext.cmake
